--- a/style.css
+++ b/style.css
@@ -377,6 +377,19 @@ h2 {
   background-color: var(--burntsienna);
   color: white;
 }
+.welcome-right img {
+  width: 100%;
+}
+@media screen and (max-width: 1120px) {
+  .welcome-section-content {
+    width: 90%;
+    flex-direction: column;
+  }
+  .welcome-left,
+  .welcome-right {
+    width: 100%;
+  }
+}
 /*  WELCOME-END */
 
 /* GOOGLE-SECTION */
@@ -530,6 +543,9 @@ h2 {
 .left-intro {
   width: 50%;
 }
+.left-intro img {
+  width: 90%;
+}
 .right-intro {
   width: 40%;
   display: flex;
@@ -571,6 +587,16 @@ h2 {
   background-color: white;
   border: 1px solid var(--burntsienna);
   color: var(--burntsienna);
+}
+@media screen and (max-width: 1120px) {
+  .introduction-section-content {
+    width: 90%;
+    flex-direction: column;
+  }
+  .right-intro,
+  .left-intro {
+    width: 100%;
+  }
 }
 /* INTRODUCTION-SECTION-END */
 
@@ -805,4 +831,182 @@ h2 {
   background-color: var(--floral-white);
   border: 1px solid var(--burntsienna);
   color: var(--burntsienna);
+}
+/* pottery-end */
+/* TEACHER-SECTION */
+.teacher-section {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+  width: 100%;
+  padding: 80px 0px;
+}
+.teacher-section-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 70%;
+}
+.teacher-card {
+  display: flex;
+  padding: 30px;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  border: 1px solid var(--dark-grey);
+  background-color: white;
+  gap: 30px;
+  border-radius: 25px;
+  font-family: "Poppins", sans-serif;
+}
+.teacher-row {
+  display: flex;
+  gap: 50px;
+}
+.top-teacher-text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: var(--dim-grey);
+  text-align: center;
+}
+.top-teacher-text h2 {
+  font-size: 40px;
+
+  font-family: "Fraunces", serif;
+}
+.top-teacher-text h5 {
+  letter-spacing: 3px;
+  color: var(--dim-grey);
+  margin: 0;
+}
+.teacher-card h4 {
+  font-size: 24px;
+  color: var(--dim-grey);
+  font-weight: bold;
+  margin: 0;
+}
+.teacher-card p {
+  color: var(--dim-grey);
+  font-size: 16px;
+}
+.teacher-card a {
+  color: var(--burntsienna);
+  font-weight: bold;
+
+  text-decoration: none;
+}
+.btm-row {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 10px;
+}
+/* TEACHER-END */
+/* connection-section */
+.connected-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 80px 0px;
+  background-color: var(--floral-white);
+}
+.connected-section-content {
+  width: 70%;
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+}
+.connected-left {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.connected-right {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.connected-text-group {
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+}
+.connected-row {
+  display: flex;
+  gap: 15px;
+  cursor: pointer;
+}
+.connected-right h2 {
+  margin: 0;
+  color: var(--dim-grey);
+  font-weight: bolder;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+}
+.connected-right h3 {
+  font-size: 40px;
+  margin: 0;
+  color: var(--dim-grey);
+  font-family: "Fraunces", serif;
+}
+.connected-right p {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+}
+/* CONNECTED-END */
+/* NEWS-SECTION */
+.news-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 20px;
+  padding: 80px 0px;
+}
+.news-section-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  gap: 20px;
+}
+.news-right {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+}
+.news-card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.news-left {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  width: 70%;
+  gap: 10px;
+  height: 100%;
+}
+.news-section img {
+  width: 100%;
+}
+@media screen and (max-width: 1120px) {
+  .news-section-content {
+    flex-direction: column;
+    width: 90%;
+  }
+  .news-left,
+  .news-right {
+    width: 100%;
+  }
 }
